--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <h1>Hello, world!</h1>
+    <h2>New feature</h2>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
